--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
 	<!-- footer -->
     
     <footer id="footer">
-        <p id="license">
+        <p class="license">
         <!-- Replace the following line with your license http://creativecommons.org/choose/ -->
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+        </p>
+        <p class="license">
+        Theme: <a href="https://github.com/openp2pdesign/FabAcademy_Template">Fab Academy Template</a> by <a href="http://openp2pdesign.org">Massimo Menichinelli</a> - Based on <a href="http://getbootstrap.com/">Twitter Bootstrap</a>.
         </p>
     </footer>
     
