Reorder general menu and first about and contact pages

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="about.html">About</a></li>
+            <li><a href="#about">About</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Exercises <span class="caret"></span></a>
               <ul id="exercises" class="dropdown-menu" role="menu">
@@ -63,7 +63,7 @@
               <ul id="project" class="dropdown-menu" role="menu">
               </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -72,13 +72,13 @@
     <div class="container">
 
 	<!-- Insert your content here below! -->
-
+      
       <div class="jumbotron">
-        <h1>Name Surname</h1>
-        <p>
+        <h2>Contact</h2>
+      	<p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius aliquam augue. Aliquam fermentum ante eget ante dictum, sit amet venenatis quam pharetra. Cras ipsum justo, suscipit eget enim quis, fringilla bibendum metus. Etiam at quam commodo urna congue faucibus ac ac diam. Vestibulum ipsum nunc, tempus non varius non, volutpat vel nulla. Morbi eget scelerisque diam, sed congue justo. In pharetra ante nec sollicitudin imperdiet.
         </p>
-      </div>
+	  </div>
 
       
     <!-- End of your content -->
