Fix style of syntax highlighter

--- a/about.html
+++ b/about.html
@@ -110,6 +110,8 @@
     <!-- Syntax Highlighter -->
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=desert">
     </script>
+    <!-- From https://github.com/jmblog/color-themes-for-google-code-prettify -->
+    <link href="media/github.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript">
 	  !function ($) {
 		$(function(){
