Add final version of menus

--- a/exercises-menu.html
+++ b/exercises-menu.html
@@ -1,17 +1,17 @@
-<li><a href="#">01. Final Project Concept</a></li>
-<li><a href="#">02. Website</a></li>
-<li><a href="#">03. 3D Modelling</a></li>
-<li><a href="#">04. Laser Cutting</a></li>
-<li><a href="#">05. Electronics Production</a></li>
-<li><a href="#">06. Make Something big</a></li>
-<li><a href="#">07. Electronics Design</a></li>
-<li><a href="#">08. Molding and Casting</a></li>
-<li><a href="#">09. Embedded Programming</a></li>
-<li><a href="#">10. 3D Scanning / 3D Printing</a></li>
-<li><a href="#">11. Measure Something</a></li>
-<li><a href="#">12. Write an Application</a></li>
-<li><a href="#">13. Add an Output Device</a></li>
-<li><a href="#">14. Mechanical Design</a></li>
-<li><a href="#">15. Build a Wired &/or Wireless Network</a></li>
-<li><a href="#">16. Machine Design</a></li>
-<li><a href="#">17. Plan and Document the Final Project</a></li>   
+<li><a href="exercise01.html">01. Principles and Practices, Project Management</a></li>
+<li><a href="exercise02.html">02. Computer-aided Design</a></li>
+<li><a href="exercise03.html">03. Computer-controlled Cutting</a></li>
+<li><a href="exercise04.html">04. Electronics Production</a></li>
+<li><a href="exercise05.html">05. 3D Scanning and Printing</a></li>
+<li><a href="exercise06.html">06. Electronics Design</a></li>
+<li><a href="exercise07.html">07. Computer-controlled Machining</a></li>
+<li><a href="exercise08.html">08. Embedded Programming</a></li>
+<li><a href="exercise09.html">09. Molding and Casting</a></li>
+<li><a href="exercise10.html">10. Input Devices</a></li>
+<li><a href="exercise11.html">11. Composites</a></li>
+<li><a href="exercise12.html">12. Output Devices</a></li>
+<li><a href="exercise13.html">13. Networking and Communications</a></li>
+<li><a href="exercise14.html">14. Mechanical Design, Machine Design</a></li>
+<li><a href="exercise15.html">15. Interface and Application Programming</a></li>
+<li><a href="exercise16.html">16. Applications and implications</a></li>
+<li><a href="exercise17.html">17. Project Development</a></li>   
