--- a/project-menu.html
+++ b/project-menu.html
@@ -1,4 +1,4 @@
-<li><a href="#">01. Concept</a></li>
-<li><a href="#">02. Notes</a></li>
-<li><a href="#">03. Process</a></li>
-<li><a href="#">04. Final Result</a></li>
+<li><a href="project01.html">01. Concept</a></li>
+<li><a href="project02.html">02. Notes</a></li>
+<li><a href="project03.html">03. Process</a></li>
+<li><a href="project04.html">04. Final Result</a></li>
