Implement a license in the footer loaded through ajax in all pages

--- a/exercise01.html
+++ b/exercise01.html
@@ -37,6 +37,7 @@
 	function menu() {
 					  $('#exercises').load("exercises-menu.html");
 					  $('#project').load("project-menu.html");
+					  $('#cclicense').load("license.html");
 					  }
 	</script>
 
@@ -208,9 +209,7 @@
 	<!-- footer -->
     
     <footer id="footer">
-        <p class="license">
-        <!-- Replace the following line with your license http://creativecommons.org/choose/ -->
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+        <p id="cclicense">
         </p>
         <p class="license">
         Theme: <a href="https://github.com/openp2pdesign/FabAcademy_Template">Fab Academy Template</a> by <a href="http://openp2pdesign.org">Massimo Menichinelli</a> <br>
