--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 	function menu() {
 					  $('#exercises').load("exercises-menu.html");
 					  $('#project').load("project-menu.html");
+					  $('#cclicense').load("license.html");
 					  }
 	</script>
 
@@ -99,10 +100,8 @@
 	<!-- footer -->
     
     <footer id="footer">
-        <p class="license">
-        <!-- Replace the following line with your license http://creativecommons.org/choose/ -->
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-        </p>
+        <p id="cclicense">
+                </p>
         <p class="license">
         Theme: <a href="https://github.com/openp2pdesign/FabAcademy_Template">Fab Academy Template</a> by <a href="http://openp2pdesign.org">Massimo Menichinelli</a> <br>
         Based on <a href="http://getbootstrap.com/">Twitter Bootstrap</a>+<a href="http://jquery.com/">JQuery</a>+<a href="https://code.google.com/p/google-code-prettify/">google-code-prettify</a>+<a href="http://jmblog.github.io/color-themes-for-google-code-prettify/github/">GitHub theme for Google Code Prettify</a>+<a href="https://code.google.com/p/jsc3d/">JSC3D</a>.
