--- a/exercise17.html
+++ b/exercise17.html
@@ -140,7 +140,7 @@
 	
 	<h3>3D Model</h3>
 	<p>	
-	Add it with:
+	The model can be rotated and zoomed with the mouse/trackpad. You can set it up with:
 	<pre class="prettyprint linenums">
 	&ltcanvas id="cv" width=640 height=480&gt;
 	It seems you are using an outdated browser that does not support canvas :-(
