Add a reference to the documentation of Bootstrap to each page

--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,10 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius aliquam augue. Aliquam fermentum ante eget ante dictum, sit amet venenatis quam pharetra. Cras ipsum justo, suscipit eget enim quis, fringilla bibendum metus. Etiam at quam commodo urna congue faucibus ac ac diam. Vestibulum ipsum nunc, tempus non varius non, volutpat vel nulla. Morbi eget scelerisque diam, sed congue justo. In pharetra ante nec sollicitudin imperdiet.
         </p>
 
+      <h3>Would you like to insert more style/elements?</h3>
+      <p>
+      Check the documentation of Bootstrap <a href="">here</a>.
+      </p>
       
     <!-- End of your content -->
 
