--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       </div>
 		
       
+    <h3>Would you like to insert more style/elements?</h3>
+      <p>
+      Check the documentation of Bootstrap <a href="">here</a>.
+      </p>
     <!-- End of your content -->
 
     </div> <!-- /container -->
