--- a/about.html
+++ b/about.html
@@ -93,6 +93,10 @@
 	  
 
       
+    <h3>Would you like to insert more style/elements?</h3>
+      <p>
+      Check the documentation of Bootstrap <a href="">here</a>.
+      </p>
     <!-- End of your content -->
 
     </div> <!-- /container -->
