--- a/exercise10.html
+++ b/exercise10.html
@@ -202,6 +202,10 @@
 	</a>
 	</p>
       
+    <h3>Would you like to insert more style/elements?</h3>
+      <p>
+      Check the documentation of Bootstrap <a href="">here</a>.
+      </p>
     <!-- End of your content -->
 
     </div> <!-- /container -->
