Add menu instructions, update exercises menu and add exercise 18 file

--- a/exercise01.html
+++ b/exercise01.html
@@ -81,7 +81,12 @@
 	<!-- Insert your content here below! -->
 
 
-    <h2>Exercise...</h1>
+     <h2>Exercise...</h1>
+    
+    <h3>Menu</h3>
+	<p>
+	You can edit it by changing the <em>exercises-menu.html</em> and <em>project-menu.html</em>. Do <strong>not</strong> add any &ltol&gt; or &ltul&gt;, leave the structure as it is.
+	</p>
     
     <h3>Text</h3>
 	<p>
