--- a/exercises-menu.html
+++ b/exercises-menu.html
@@ -4,14 +4,15 @@
 <li><a href="exercise04.html">04. Electronics Production</a></li>
 <li><a href="exercise05.html">05. 3D Scanning and Printing</a></li>
 <li><a href="exercise06.html">06. Electronics Design</a></li>
-<li><a href="exercise07.html">07. Computer-controlled Machining</a></li>
-<li><a href="exercise08.html">08. Embedded Programming</a></li>
+<li><a href="exercise07.html">07. Embedded Programming</a></li>
+<li><a href="exercise08.html">08. Computer-controlled Machining</a></li>
 <li><a href="exercise09.html">09. Molding and Casting</a></li>
 <li><a href="exercise10.html">10. Input Devices</a></li>
-<li><a href="exercise11.html">11. Composites</a></li>
-<li><a href="exercise12.html">12. Output Devices</a></li>
+<li><a href="exercise11.html">11. Output Devices</a></li>
+<li><a href="exercise12.html">12. Composites</a></li>
 <li><a href="exercise13.html">13. Networking and Communications</a></li>
 <li><a href="exercise14.html">14. Mechanical Design, Machine Design</a></li>
 <li><a href="exercise15.html">15. Interface and Application Programming</a></li>
-<li><a href="exercise16.html">16. Applications and implications</a></li>
-<li><a href="exercise17.html">17. Project Development</a></li>   
+<li><a href="exercise16.html">16. Applications and Implications</a></li>
+<li><a href="exercise17.html">17. Invention, Intellectual Property, and Income</a></li> 
+<li><a href="exercise18.html">18. Project Development</a></li>   
